layout issues with picon and photo toolbar buttons

--- a/public/stylesheets/photo.css
+++ b/public/stylesheets/photo.css
@@ -395,10 +395,10 @@
 
 .photo-toolbar .info-button{
     position:relative;
-    background: url(/images/album_toolbar_info.png) no-repeat scroll 0px -0px transparent;
-    top:0px;
+    background: url(/images/album_toolbar_info.png) no-repeat scroll 0px -1px transparent;
+    top:1px;
     width:20px;
-    height:18px;
+    height:17px;
     float:left;
     /*display:inline-block;*/
     cursor:pointer;
@@ -406,7 +406,7 @@
 }
 
 .photo-toolbar .info-button:hover{
-    background: url(/images/album_toolbar_info.png) no-repeat scroll 0px -18px transparent;
+    background: url(/images/album_toolbar_info.png) no-repeat scroll 0px -19px transparent;
 }
 
 
